[metadata]
name = bluetti_mqtt
version = 0.15.0
url = https://github.com/GHCMIS/bluetti_mqtt2
author = GHCMIS
author_email = mis@ghcci.com
description = MQTT interface to Bluetti power stations
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
zip_safe = false
install_requires =
    asyncio-mqtt
    bleak
    crcmod

[options.entry_points]
console_scripts =
    bluetti-discovery = bluetti_mqtt2.discovery_cli:main
    bluetti-logger = bluetti_mqtt2.logger_cli:main
    bluetti-mqtt = bluetti_mqtt2.server_cli:main
